# Text-File-Natural-Language-Processor

./: CMakeLists.txt  Document.cpp  Document.hpp  DocumentWindow.cpp  DocumentWindow.h  DocumentWorker.cpp  DocumentWorker.h  Doxyfile  Lexicon.cpp  Lexicon.hpp  MainWindow.cpp  MainWindow.h  ProjectTest.cpp  ProjectTest.h  README.md  Syllabizer.cpp  Syllabizer.hpp  US English word info.csv  dockerfile  guimain.cpp  main.cpp  syllabizer_test.cpp  unit_test.cpp
